5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1692_1101.log
== TEST (2019-05-02 01:32:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0<= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0<= consumo <=1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo >1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0<= consumo <=5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo >5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:32:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0<= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0<= consumo <=1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo >1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0<= consumo <=5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo >5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.149444
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:32:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0<= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0<= consumo <=1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo >1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0<= consumo <=5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo >5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:32:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0<= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0<= consumo <=1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo >1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0<= consumo <=5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo >5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:32:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0<= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0<= consumo <=1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo >1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0<= consumo <=5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo >5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:33:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0<= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0<= consumo <=1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo >1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0<= consumo <=5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo >5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:35:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.18715
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:36:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.160036
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:36:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumi de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:36:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.147376
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:36:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:37:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:38:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=ihttp://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1692&turma=224#nput("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- ERROR:
File "XXXX", line 5
    tipo=ihttp://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1692&turma=224#nput("Tipo de instalacao: ")
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:38:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:39:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:39:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:39:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:40:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo=="R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo=="I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:41:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo=float(input("Consumo de energia: "))
tipo=input("Tipo de instalacao: ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.163774
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:42:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas: ",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.161184
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:44:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- EXECUTION TIME:
0.20191
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kwh e tipo",tipo)
	print("Dados invalidos ")
			
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:16:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("Tipo de instalacao: ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.128744
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:17:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("O tipo de instalação : ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:17:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia: "))
tipo = input("O tipo de instalação : ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.147899
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:20:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalação  ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.195457
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:21:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalação  ")
tipo = tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalação  ")
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.161315
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalação  ")
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:23:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalacao  ")
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.150827
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:23:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalacao  ")
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:24:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalacao  ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco,2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:26:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalacao  ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0,44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0,65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$", preco)
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0,55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0,60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:28:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("Consumo de energia "))
tipo = input("O tipo de instalacao  ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$", preco)
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.154056
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
valor total:  R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:29:47) 
-- CODE:
consumo = float(input("Consumo de energia: "))
tipo = input("O tipo de instalacao: ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$", preco)
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.156202
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
valor total:  R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:52) 
-- CODE:
consumo = float(input("Consumo de energia: "))
tipo = input("O tipo de instalacao: ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$", preco)
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",preco)
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:34:00) 
-- CODE:
consumo = float(input("Consumo de energia: "))
tipo = input("O tipo de instalacao: ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$", round(preco, 2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- OUTPUT:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:34:28) 
-- CODE:
consumo = float(input("Consumo de energia: "))
tipo = input("O tipo de instalacao: ")
tipo= tipo.upper()
if(tipo == "R" and 0 <= consumo <=500):
	preco = consumo * 0.44
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "R" and consumo > 500):
	preco = consumo * 0.65
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "C" and 0 <= consumo <= 1000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$", round(preco, 2))
elif(tipo == "C" and consumo > 1000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "I" and 0 <= consumo <= 5000):
	preco = consumo * 0.55
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
elif(tipo == "I" and consumo > 5000):
	preco = consumo * 0.60
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("valor total:  R$",round(preco, 2))
else:
	print("Entradas:",consumo,"kWh  e tipo",tipo)
	print("Dados invalidos ")
-- EXECUTION TIME:
0.204502
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh  e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh  e tipo R
valor total:  R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
